feat: 4단계 로또 수동(#2810)